@@ -102,6 +102,9 @@ Ecawave is freely distributable according to the terms of the
 GNU General Public License (see the file 'COPYING').
 
 This program is distributed without any warranty. See the file 
-'COPYING' for details. 
+'COPYING' for details.
+
+As an exception to GPL, you are allowed to link this software with Qt 
+libraries. See the file 'COPYING.Qt' for details.
 
 =======================================================================
