@@ -64,11 +64,11 @@ ecasound_qt_mocs = 	eca-qtdebug_moc.cpp \
 qtecasound_SOURCES = $(ecasound_qt_src) $(ecasound_qt_mocs) $(ecasound_qt_includes)
 qtecasound_debug_SOURCES = $(ecasound_qt_src) $(ecasound_qt_mocs) $(ecasound_qt_includes)
 qtecasound_LDADD = 	-L$(qt_libraries) -lqt \
-		   	-L$(top_builddir)/kvutils/.libs \
+		   	-L$(top_builddir)/kvutils/.libs -lkvutils \
 		   	$(top_builddir)/libecasound/libecasound.la \
 			$(top_builddir)/libqtecasound/libqtecasound.la
 qtecasound_debug_LDADD =  -L$(qt_libraries) -lqt \
-		   	-L$(top_builddir)/kvutils/.libs \
+		   	-L$(top_builddir)/kvutils/.libs -lkvutils \
 			$(top_builddir)/libecasound/libecasound_debug.la \
 			$(top_builddir)/libqtecasound/libqtecasound_debug.la
 qtecasound_LDFLAGS = $(all_libraries)
