@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------
-** Ecasound - User-visible changes (NEWS)      (last edited: 250600) **
+** Ecasound - User-visible changes (NEWS)      (last edited: 050700) **
 -----------------------------------------------------------------------
 
 About the version numbers... "vx.y.zRt" :
@@ -15,6 +15,7 @@ About the version numbers... "vx.y.zRt" :
 Last officially released version is -*> v1.7.9r13 <*-
 
 ??072000 (v1.8.1d14)
+	- changed: small change in licensing - see the file COPYING.Qt
 	- remove: support for native ALSA rawmidi temporarily removed
 	          (while waiting, use ALSA's OSS-emulation)
 25062000 (v1.8.0d14)
